--- a/frontend/garage.html
+++ b/frontend/garage.html
@@ -48,7 +48,7 @@
     <script>
         var backDiv = document.getElementById("back");
         backDiv.onclick = function() {
-            window.location.href = 'city.html';
+            window.location.href = '/city';
         };
         var zoomInButton = document.getElementById("zoomIn");
         zoomInButton.onclick = function() {
