--- a/frontend/register.html
+++ b/frontend/register.html
@@ -26,7 +26,7 @@
                 <input type="checkbox" id="checkbox" required>
                 <label for="checkbox">Akceptuję <a href="https://www.google.pl" target="_blank">regulamin</a> serwisu</label>
             </div>
-            <a href="./login.html">Logowanie</a>
+            <a href="/login">Logowanie</a>
 
                 <button class="sign-in" type="submit">Zarejestruj się</button>
         </form>
