--- a/frontend/city.html
+++ b/frontend/city.html
@@ -77,27 +77,27 @@
 
         var kioskDiv = document.getElementById("kiosk");
         kioskDiv.onclick = function() {
-            window.location.href = 'kiosk.html';
+            window.location.href = '/kiosk';
         };
         var raceDiv = document.getElementById("race");
         raceDiv.onclick = function() {
-            window.location.href = 'race.html';
+            window.location.href = '/race';
         };
         var garageDiv = document.getElementById("garage");
         garageDiv.onclick = function() {
-            window.location.href = 'garage.html';
+            window.location.href = '/garage';
         };
         var naukaDiv = document.getElementById("nauka");
         naukaDiv.onclick = function() {
-            window.location.href = 'nauka.html';
+            window.location.href = '/nauka';
         };
         var bibliotekaDiv = document.getElementById("biblioteka");
         bibliotekaDiv.onclick = function() {
-            window.location.href = 'biblioteka.html';
+            window.location.href = '/biblioteka';
         };
         var salonDiv = document.getElementById("salon");
         salonDiv.onclick = function() {
-            window.location.href = 'salon.html';
+            window.location.href = '/salon';
         };
     </script>
 </body>
