--- a/frontend/login.html
+++ b/frontend/login.html
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     <input type="password" placeholder="Password" name="password" required>
                 </div>
-                <a href="./register.html">Rejestracja</a>
+                <a href="/register">Rejestracja</a>
                 <button class="sign-in" type="submit">Zaloguj się</button>
             </form>
         </div>
