--- a/frontend/race.html
+++ b/frontend/race.html
@@ -32,7 +32,7 @@
     <script>
         var backDiv = document.getElementById("back");
         backDiv.onclick = function() {
-            window.location.href = 'city.html';
+            window.location.href = '/city';
         };
         var zoomInButton = document.getElementById("zoomIn");
         zoomInButton.onclick = function() {
