--- a/frontend/register.html
+++ b/frontend/register.html
@@ -26,9 +26,12 @@
                 <input type="checkbox" id="checkbox" required>
                 <label for="checkbox">Akceptuję <a href="https://www.google.pl" target="_blank">regulamin</a> serwisu</label>
             </div>
-            <a href="./login.html">Logowanie</a>
-
+                <div class="login">
+                    <div class="link">
+                        <a href="./login.html">Logowanie</a>
+                    </div>
                 <button class="sign-in" type="submit">Zarejestruj się</button>
+                </div>
         </form>
     </div>
 </div>
