--- a/frontend/city.html
+++ b/frontend/city.html
@@ -23,11 +23,15 @@
         </div>
         <div id="screen">
             <div id="kiosk">
-                <div class="tekst">
+                <div class="tekstKiosk">
                     <p>Kiosk</p>
                 </div>
             </div>
-            <div id="race"></div>
+            <div id="race">
+                <div class="tekstRace">
+                    <p>Race</p>
+                </div>
+            </div>
             <div id="garage"></div>
             <div id="nauka"></div>
             <div id="biblioteka"></div>
