--- a/frontend/city.html
+++ b/frontend/city.html
@@ -32,10 +32,26 @@
                     <p>Race</p>
                 </div>
             </div>
-            <div id="garage"></div>
-            <div id="nauka"></div>
-            <div id="biblioteka"></div>
-            <div id="salon"></div>
+            <div id="garage">
+                <div class="tekstGarage">
+                    <p>Garage</p>
+                </div>
+            </div>
+            <div id="nauka">
+                <div class="tekstNauka">
+                    <p>Nauka</p>
+                </div>
+            </div>
+            <div id="biblioteka">
+                <div class="tekstBiblio">
+                    <p>Biblioteka</p>
+                </div>
+            </div>
+            <div id="salon">
+                <div class="tekstSalon">
+                    <p>Salon</p>
+                </div>
+            </div>
         </div>
         <div id="settings">
             <div class="settingsButton" id="back"></div>
