--- a/frontend/biblioteka.html
+++ b/frontend/biblioteka.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" href="assets/icon.png" type="image/png">
     <title>Biblioteka</title>
+    <style>
+        #screen {
+            background-image: url("./assets/background/background3.png");
+            background-size: auto;
+        }
+    </style>
 </head>
 <body>
     <div class="body">
@@ -15,15 +21,16 @@
                 <div id="val"></div>
             </div>
         </div>
+        <div id="ramka">
         <div id="screen">
-            <div class="bookbutton", id="ostrzegawcze"></div>
-            <div class="bookbutton", id="zakazu"></div>
-            <div class="bookbutton", id="nakazu"></div>
-            <div class="bookbutton", id="informacyjne"></div>
-            <div class="bookbutton", id="uzupelniajace"></div>
-            <div class="bookbutton", id="poziome"></div>
-            <div class="bookbutton", id="swietlne"></div>
-            <div class="bookbutton", id="kodeks"></div>
+            <div class="bookbutton" id="ostrzegawcze"></div>
+            <div class="bookbutton" id="zakazu"></div>
+            <div class="bookbutton" id="nakazu"></div>
+            <div class="bookbutton" id="informacyjne"></div>
+            <div class="bookbutton" id="uzupelniajace"></div>
+            <div class="bookbutton" id="poziome"></div>
+            <div class="bookbutton" id="swietlne"></div>
+            <div class="bookbutton" id="kodeks"></div>
         </div>
         <div id="book">
             <div id="leftArrow"></div>
@@ -44,6 +51,7 @@
                 <div id="backToScreen"></div>
             </div>
             <div id="rightArrow"></div>
+        </div>
         </div>
         <div id="settings">
             <div class="settingsButton" id="back"></div>
