--- a/frontend/city.html
+++ b/frontend/city.html
@@ -21,6 +21,7 @@
                 <div id="val"></div>
             </div>
         </div>
+        <div id="ramka">
         <div id="screen">
             <div id="kiosk">
                 <div class="tekstKiosk">
@@ -52,6 +53,7 @@
                     <p>Salon</p>
                 </div>
             </div>
+        </div>
         </div>
         <div id="settings">
             <div class="settingsButton" id="back"></div>
