--- a/frontend/race.html
+++ b/frontend/race.html
@@ -16,9 +16,11 @@
                 <div id="val"></div>
             </div>
         </div>
+        <div id="ramka">
         <div id="screen">
             <div id="babolot"></div>
             <div id="racehole"></div>
+        </div>
         </div>
         <div id="settings">
             <div class="settingsButton" id="back"></div>
