--- a/frontend/register.html
+++ b/frontend/register.html
@@ -28,7 +28,7 @@
             </div>
                 <div class="login">
                     <div class="link">
-                        <a href="./login.html">Logowanie</a>
+                        <a href="./login">Logowanie</a>
                     </div>
                 <button class="sign-in" type="submit">Zarejestruj się</button>
                 </div>
