--- a/frontend/salon.html
+++ b/frontend/salon.html
@@ -18,6 +18,7 @@
                 <div id="val"></div>
             </div>
         </div>
+        <div id="ramka">
         <div id="screen">
             <div id="animacjaAuta"></div>
             <div id="koloryOpcje">
@@ -25,6 +26,7 @@
                 <div id="resetUlepszen"></div>
                 <div id="zapiszNowyKolor"></div>
             </div>
+        </div>
         </div>
         <div id="settings">
             <div class="settingsButton" id="back"></div>
