--- a/frontend/garage.html
+++ b/frontend/garage.html
@@ -15,6 +15,7 @@
                 <div id="val"></div>
             </div>
         </div>
+        <div id="ramka">
         <div id="screen">
             <div id="samochod"></div>
             <div id="statystyki"></div>
@@ -35,6 +36,7 @@
                     <div id="silzdj"></div>
                 </div>
             </div>
+        </div>
         </div>
         <div id="settings">
             <div class="settingsButton" id="back"></div>
