--- a/frontend/kiosk.html
+++ b/frontend/kiosk.html
@@ -6,6 +6,28 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" href="assets/icon.png" type="image/png">
     <title>Kiosk</title>
+    <style>
+        #screen {
+            background-image: url("./assets/background/background2.png");
+            background-size: auto;
+        }
+        #backToScreen {
+            animation: rotate 1s linear infinite; /* Ustawienie animacji o nazwie 'rotate' */
+            animation-direction: alternate;
+        }
+
+        @keyframes rotate {
+            0% {
+                border: 4px solid #422136;
+                border-radius: 90%;
+            }
+            100% {
+                transform: scale(1.3);
+                border: 4px solid #742f29;
+                border-radius: 40%;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="body">
@@ -15,6 +37,7 @@
                 <div id="val"></div>
             </div>
         </div>
+        <div id="ramka">
         <div id="screen">
             <div class="Stats" id="babolotStats"></div>
             <div class="Stats" id="holeraceStats"></div>
@@ -23,9 +46,12 @@
             <div class="Stats" id="lvl"></div>
         </div>
         <div id="AllStatsInfo">
-            <div id="backToScreen"></div>
-            <table id="statsContainer"></table>
-          </div>          
+            <div id="statsDiv">
+                <table id="statsContainer"></table>
+                <div id="backToScreen"></div>
+            </div>
+          </div>
+        </div>
         <div id="settings">
             <div class="settingsButton" id="back"></div>
             <div class="settingsButton" id="zoomIn"></div>
