--- a/frontend/login.html
+++ b/frontend/login.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="login">
                     <div class="link">
-                        <a href="./register.html">Rejestracja</a>
+                        <a href="./register">Rejestracja</a>
                     </div>
                 <button class="sign-in" type="submit">Zaloguj się</button>
                 </div>
