--- a/frontend/nauka.html
+++ b/frontend/nauka.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" href="assets/icon.png" type="image/png">
     <title>Nauka Jazdy</title>
+    <style>
+        #screen {
+            background-image: url("./assets/background/background4.png");
+        }
+    </style>
 </head>
 <body>
     <div class="body">
@@ -15,15 +20,16 @@
                 <div id="val"></div>
             </div>
         </div>
+        <div id="ramka">
         <div id="screen">
             <div id="oknaWybor">
-                <input type="checkbox" name="sign" value="ZnakiOstrzegawcze"> Znaki Ostrzegawcze<br>
-                <input type="checkbox" name="sign" value="ZnakiZakazu"> Znaki Zakazu<br>
-                <input type="checkbox" name="sign" value="ZnakiNakazu"> Znaki Nakazu<br>
-                <input type="checkbox" name="sign" value="ZnakiInformacyjne"> Znaki Informacyjne<br>
-                <input type="checkbox" name="sign" value="ZnakiUzupelniajace"> Znaki Uzupełniające<br>
-                <input type="checkbox" name="sign" value="ZnakiPoziome"> Znaki Poziome<br>
-                <input type="checkbox" name="sign" value="ZnakiSwietlne"> Znaki Świetlne<br>
+                <input class="checkboxZnaki" type="checkbox" name="sign" value="ZnakiOstrzegawcze"> Znaki Ostrzegawcze<br>
+                <input class="checkboxZnaki" type="checkbox" name="sign" value="ZnakiZakazu"> Znaki Zakazu<br>
+                <input class="checkboxZnaki" type="checkbox" name="sign" value="ZnakiNakazu"> Znaki Nakazu<br>
+                <input class="checkboxZnaki" type="checkbox" name="sign" value="ZnakiInformacyjne"> Znaki Informacyjne<br>
+                <input class="checkboxZnaki" type="checkbox" name="sign" value="ZnakiUzupelniajace"> Znaki Uzupełniające<br>
+                <input class="checkboxZnaki" type="checkbox" name="sign" value="ZnakiPoziome"> Znaki Poziome<br>
+                <input class="checkboxZnaki" type="checkbox" name="sign" value="ZnakiSwietlne"> Znaki Świetlne<br>
             </div>
             <div id="empty"></div>
             <div id="znaki"></div>
@@ -47,6 +53,7 @@
                 <div id="podsumowanie"></div>
                 <div id="jeszczeRaz"></div>
             </div>
+        </div>
         </div>
         <div id="settings">
             <div class="settingsButton" id="back"></div>
