--- a/frontend/garage.html
+++ b/frontend/garage.html
@@ -18,23 +18,25 @@
         <div id="ramka">
         <div id="screen">
             <div id="samochod"></div>
+            <div class="Garage">
             <div id="statystyki"></div>
             <div id="updateGarage">
-                <div id="amortyzator">
-                    <div id="amorlvl"></div>
-                    <div id="amorcena"></div>
-                    <div id="amorzdj"></div>
+                <div class="updateGarage" id="amortyzator">
+                    <div class="LVL" id="amorlvl"></div>
+                    <div class="cena" id="amorcena"></div>
+                    <div class="zdjGarage" id="amorzdj"></div>
                 </div>
-                <div id="zderzak">
-                    <div id="zdelvl"></div>
-                    <div id="zdecena"></div>
-                    <div id="zdezdj"></div>
+                <div class="updateGarage" id="zderzak">
+                    <div class="LVL" id="zdelvl"></div>
+                    <div class="cena" id="zdecena"></div>
+                    <div class="zdjGarage" id="zdezdj"></div>
                 </div>
-                <div id="silnik">
-                    <div id="sillvl"></div>
-                    <div id="silcena"></div>
-                    <div id="silzdj"></div>
+                <div class="updateGarage" id="silnik">
+                    <div class="LVL" id="sillvl"></div>
+                    <div class="cena" id="silcena"></div>
+                    <div class="zdjGarage" id="silzdj"></div>
                 </div>
+            </div>
             </div>
         </div>
         </div>
