--- a/frontend/kiosk.html
+++ b/frontend/kiosk.html
@@ -41,11 +41,11 @@
         </div>
         <div id="ramka">
         <div id="screen">
-            <div class="Stats" id="babolotStats"></div>
+            <div class="Stats" id="babolotStats"><img src="./assets/garage/kioskbabolot.png"></div>
             <div class="Stats" id="holeraceStats"></div>
             <div class="Stats" id="quizyStats"></div>
             <div class="Stats" id="XP"></div>
-            <div class="Stats" id="lvl"></div>
+            <div id="lvl"></div>
         </div>
         <div id="AllStatsInfo">
             <div id="statsDiv">
