--- a/frontend/kiosk.html
+++ b/frontend/kiosk.html
@@ -43,10 +43,18 @@
         </div>
         <div id="ramka">
         <div id="screen">
-            <div class="Stats" id="babolotStats"><img src="./assets/garage/kioskbabolot.png"></div>
-            <div class="Stats" id="holeraceStats"></div>
-            <div class="Stats" id="quizyStats"></div>
-            <div class="Stats" id="XP"></div>
+            <div class="Stats" id="babolotStats">
+                <div id="imagebabolotStats"></div>
+            </div>
+            <div class="Stats" id="holeraceStats">
+                <div id="imageholeStats"></div>
+            </div>
+            <div class="Stats" id="quizyStats">
+                <div id="imagequizyStats"></div>
+            </div>
+            <div class="Stats" id="XP">
+                <div id="imageXP"></div>
+            </div>
             <div id="lvl"></div>
         </div>
         <div id="AllStatsInfo">
