--- a/frontend/nauka.html
+++ b/frontend/nauka.html
@@ -32,8 +32,14 @@
                 <input class="checkboxZnaki" type="checkbox" name="sign" value="ZnakiSwietlne"> Znaki Świetlne<br>
             </div>
             <div id="empty"></div>
-            <div id="znaki"></div>
-            <div id="kodeksNauka"></div>            
+            <div id="znaki">
+
+                <div class="znaki">Quiz</div>
+            </div>
+            <div id="kodeksNauka">
+                <img src="./assets/sign/kodeks.png">
+                <div class="kodeks">Kodeks</div>
+            </div>
         </div>
         <div id="quiz">
             <div id="boxQuiz">
