--- a/frontend/city.html
+++ b/frontend/city.html
@@ -11,6 +11,16 @@
             background-image: url("./assets/city/menu1.png");
             background-size: cover;
         }
+
+        #back{
+            background-image: url("./assets/menu/logout1.png");
+            background-size: cover;
+        }
+
+        #back:hover {
+            background-image: url("./assets/menu/logout.png");
+            background-size: cover;
+        }
     </style>
 </head>
 <body>
