--- a/frontend/nauka.html
+++ b/frontend/nauka.html
@@ -33,8 +33,8 @@
             </div>
             <div id="empty"></div>
             <div id="znaki">
-
-                <div class="znaki">Quiz</div>
+                <img src="./assets/sign/quizy.png">
+                <div class="kodeks">Quiz</div>
             </div>
             <div id="kodeksNauka">
                 <img src="./assets/sign/kodeks.png">
