--- a/Wojtek/biblioteka/biblioteka.html
+++ b/Wojtek/biblioteka/biblioteka.html
@@ -55,6 +55,27 @@
     </div>
 
     <script>
+         function updateMoney() {
+    fetch('/money', { method: 'GET' })
+      .then(response => {
+        if (response.ok) {
+          return response.json();
+        } else {
+          throw new Error('Błąd podczas pobierania danych.');
+        }
+      })
+      .then(data => {
+        const moneyValue = data.userLevel; // Assuming the response JSON has a 'userLevel' field for money
+        const valDiv = document.getElementById('val');
+        valDiv.textContent = `${moneyValue}`; // Update the 'val' div with the user's money
+      })
+      .catch(error => {
+        console.error(error);
+      });
+  }
+
+  // Call the updateMoney function to initially fetch and display user's money
+  updateMoney();
         var backDiv = document.getElementById("back");
         backDiv.onclick = function() {
             window.location.href = 'city.html';
