--- a/frontend/city.html
+++ b/frontend/city.html
@@ -87,7 +87,7 @@
             })
             .then(data => {
                 if (data.success) {
-                    window.location.href = 'login.html'; // Przekierowanie na stronę logowania
+                    window.location.href = 'login'; // Przekierowanie na stronę logowania
                     } else {
                     throw new Error('Błąd podczas wylogowywania.');
                 }
