--- a/frontend/kiosk.html
+++ b/frontend/kiosk.html
@@ -14,6 +14,9 @@
         #backToScreen {
             animation: rotate 1s linear infinite; /* Ustawienie animacji o nazwie 'rotate' */
             animation-direction: alternate;
+            position: absolute;
+            margin-top: 650px;
+            width: 64px;
         }
 
 
@@ -59,6 +62,7 @@
         </div>
         <div id="AllStatsInfo">
             <div id="statsDiv">
+                <div id="naglowek"></div>
                 <table id="statsContainer"></table>
                 <div id="backToScreen"></div>
             </div>
