--- a/frontend/nauka.html
+++ b/frontend/nauka.html
@@ -34,7 +34,7 @@
             <div id="empty"></div>
             <div id="znaki">
                 <img src="./assets/sign/quizy.png">
-                <div class="kodeks">Quiz</div>
+                <div class="kodeks">Znaki</div>
             </div>
             <div id="kodeksNauka">
                 <img src="./assets/sign/kodeks.png">
@@ -48,16 +48,20 @@
                 <div id="niepoprawneSymbol"></div><div id="niepoprawne"></div>
                 <div id="pytanie"></div>
                 <div id="ans" >
-                    <div class="answer" id="odp1"></div>
-                    <div class="answer" id="odp2"></div>
-                    <div class="answer" id="odp3"></div>
+                    <div class="answer" id="odp1" hidden></div>
+                    <div class="answer" id="odp2" hidden></div>
+                    <div class="answer" id="odp3" hidden></div>
                 </div>
             </div>
         </div>
         <div id="quizEnd">
             <div id="box">
                 <div id="gratulacjeNapis"></div>
-                <div id="podsumowanie"></div>
+                <div id="podsumowanie">
+                    <div id="podsumowanie1"></div>
+                    <div id="podsumowanie2"></div>
+                    <div id="podsumowanie3"></div>
+                </div>
                 <div id="jeszczeRaz"></div>
             </div>
         </div>
