--- a/frontend/biblioteka.html
+++ b/frontend/biblioteka.html
@@ -35,18 +35,8 @@
             <div id="leftArrow" onclick="showPrevious()"></div>
             <div id="info">
                 <div id="photoInfo"></div>
-                <div id="titleInfo">
-                    <h1>Lorem Ipsum lorem ipsum lorem ipsum</h1>
-                </div>
-                <div id="aboutInfo">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        when an unknown printer took a galley of type and scrambled it to make a
-                        type specimen book. It has survived not only five centuries, but also the
-                        leap into electronic typesetting, remaining essentially unchanged.
-                    </p>
-                </div>
+                <div id="titleInfo"></div>
+                <div id="aboutInfo"></div>
                 <div id="backToScreen" onclick="backToScreenClick()"></div>
             </div>
             <div id="rightArrow" onclick="showNext()"></div>
