nowy kiosk+race

--- a/frontend/kiosk.html
+++ b/frontend/kiosk.html
@@ -58,6 +58,7 @@
             <div class="Stats" id="XP">
                 <div id="imageXP"></div>
             </div>
+            <div class="Stats" id="runout"></div>
             <div id="lvl"></div>
         </div>
         <div id="AllStatsInfo">
