--- a/frontend/race.html
+++ b/frontend/race.html
@@ -20,6 +20,7 @@
         <div id="screen">
             <div id="babolot"></div>
             <div id="racehole"></div>
+            <div id="runOut"></div>
         </div>
         </div>
         <div id="settings">
