--- a/frontend/salon.html
+++ b/frontend/salon.html
@@ -8,26 +8,6 @@
     <title>Salon</title>
 </head>
 <body>
-    <style>
-        .colors{
-            width: 50%;
-            height: 50%;
-            float: left;
-        }
-        #color1{
-            background-color: red;
-        }
-        #color2{
-            background-color: orange;
-        }
-        #color3{
-            background-color: green;
-        }
-        #color4{
-            background-color: pink ;
-        }
-        
-    </style>
     <div class="body">
         <div id="money">
             <div id="moneyValue">
@@ -45,7 +25,9 @@
                     <div class="colors" id="color3"></div>
                     <div class="colors" id="color4"></div>
                 </div>
-                <div id="resetUlepszen"></div>
+                <div id="resetUlepszen">
+                    <h1>Wybierz kolor</h1>
+                </div>
                 <div id="zapiszNowyKolor"></div>
             </div>
         </div>
