--- a/Wojtek/nauka/nauka.html
+++ b/Wojtek/nauka/nauka.html
@@ -45,7 +45,9 @@
         <div id="quizEnd">
             <div id="box">
                 <div id="gratulacjeNapis">Tak</div>
-                <div id="podsumowanie"></div>
+                <div id="podsumowanie1"></div>
+                <div id="podsumowanie2"></div>
+                <div id="podsumowanie3"></div>
                 <div id="jeszczeRaz"></div>
             </div>
         </div>
